# spinlattice

./: README.md  pyproject.toml
src/spinlattice/: __init__.py  cli.py  lattice.py  metropolis.py  observables.py  sweep.py  viz.py  wolff.py
tests/: test_critical.py  test_dynamics.py  test_exact.py  test_lattice.py  test_observables.py
